2018-09-22  Bruno Haible  <bruno@clisp.org>

	Fix problem with non-ASCII characters in file names on Windows.
	Reported by Ulrike Fischer
	at <https://gitlab.com/gnu-clisp/clisp/issues/10>.
	* m4/filecharset.m4 (CL_FILECHARSET): Test only the ASCII character
	range.
	* pathname.d (legal_namebyte): Return true for all non-ASCII bytes.
	Hardcode known expressions for Unix and Windows.
	* src/aclocal.m4, src/configure: Regenerated.

2018-07-18  Bruno Haible  <bruno@clisp.org>

	Fix the macroexpander of MULTIPLE-VALUE-SETQ.
	Reported by Charles Zhang
	at <https://gitlab.com/gnu-clisp/clisp/issues/6>.
	* macros1.lisp (multiple-value-setq): Treat case of no variables
	specially.

2018-06-24  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (check_gdbm_errno): Update to gdbm 1.15.

2018-04-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (MYIMPROOT): Set to gnu.org to work around the lack
	of HTTPS support in CLISP.

2018-04-23  Bruno Haible  <bruno@clisp.org>

	Update URLs.
	* makemake.in (cygwin.README): Update URL to libsigsegv home page.

2018-04-22  Bruno Haible  <bruno@clisp.org>

	Add support for Linux/riscv64.
	* m4/mmap.m4 (CL_MMAP): Avoid crash on Linux/riscv64.
	* aclocal.m4, src/configure: Regenerated.
	* lispbibl.d (RISCV64): New macro.
	(C_CODE_ALIGNMENT, intDsize, MAPPABLE_ADDRESS_RANGE_*, SP_register,
	ASM_get_SP_register, SP_DOWN): Define for Linux/riscv64.
	* Makefile.devel (multibuild-linux-riscv64): New target.
	* makemake.in (XCFLAGS): For Linux/riscv64, enable all optimizations
	except ASM.
	Reduce optimization when compiling hashtabl.c.

2018-04-22  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Regenerated.

2018-04-22  Bruno Haible  <bruno@clisp.org>
