@@ -18,6 +18,8 @@ User visible changes
 * Bug fixes:
   + Better UNICODE handling in the regexp module (bug#691).
   + DIRECTORY matches like PATHNAME-MATCH-P (bug#724).
+  + Fixed a compiler bug that could lead to a "Compiler bug!!" error.
+    <https://gitlab.com/gnu-clisp/clisp/issues/14>
 
 
 2.50 branch, not yet released
